Bug 507592, don't allow refocusing an element during a blur, r=smaug